# pulumi-f5os

./: .ci-mgmt.yaml  .golangci.yml  .upgrade-config.yml  Makefile  README.md
.github/actions/download-prerequisites/: action.yml
.github/workflows/: build_provider.yml  prerequisites.yml  publish.yml  resync-build.yml
examples/: examples_test.go  go.mod
provider/: go.mod  go.sum  resources.go
sdk/dotnet/: ConfigBackup.cs  Dns.cs  GetDeviceInfo.cs  GetTenantImage.cs  Interface.cs  Lag.cs  License.cs  Logging.cs  NtpServer.cs  Partition.cs  PartitionChangePassword.cs  Primarykey.cs  Provider.cs  Pulumi.F5os.csproj  README.md  System.cs  Tenant.cs  TenantImage.cs  TlsCertKey.cs  Utilities.cs  Vlan.cs  pulumi-plugin.json
sdk/dotnet/Config/: Config.cs
sdk/nodejs/: README.md  configBackup.ts  dns.ts  getDeviceInfo.ts  getTenantImage.ts  index.ts  interface.ts  lag.ts  license.ts  logging.ts  ntpServer.ts  package.json  partition.ts  partitionChangePassword.ts  primarykey.ts  provider.ts  system.ts  tenant.ts  tenantImage.ts  tlsCertKey.ts  tsconfig.json  vlan.ts
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_f5os/: README.md  __init__.py  _inputs.py  config_backup.py  dns.py  get_device_info.py  get_tenant_image.py  interface.py  lag.py  license.py  logging.py  ntp_server.py  outputs.py  partition.py  partition_change_password.py  primarykey.py  provider.py  system.py  tenant.py  tenant_image.py  tls_cert_key.py  vlan.py
sdk/python/pulumi_f5os/config/: __init__.pyi  vars.py
sdk/python/pulumi_f5os/region/: _enums.py
sdk/schema/: schema.json
(+61 files in other folders)
